# hhmiTask

./: combined_metadata.csv  pyproject.toml  retrievers.py
dagster_pipeline/: assets.py  definitions.py  resources.py
dagster_pipeline/configs/: empiarConfig.py  epflConfig.py  hemibrainConfig.py  janeliaConfig.py  openMicroscopyConfig.py
